<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.76"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.64"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.37"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/guideline_v2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/_0"
        android:backgroundTint="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_titik"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h5"
        app:layout_constraintStart_toStartOf="@+id/guideline_v2"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v3"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/titik"
        android:backgroundTint="@color/white"
        android:textColor="@color/orange"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v1"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_h5"
        android:text="@string/_1"
        android:backgroundTint="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h4"
        app:layout_constraintStart_toStartOf="@+id/guideline_v1"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v2"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_h5"
        android:text="@string/_2"
        android:backgroundTint="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h4"
        app:layout_constraintStart_toStartOf="@+id/guideline_v2"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v3"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_h5"
        android:text="@string/_3"
        android:backgroundTint="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sama_dengan"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h4"
        app:layout_constraintStart_toStartOf="@+id/guideline_v3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/sama_dengan"
        android:backgroundTint="@color/orange"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v1"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_h4"
        android:text="@string/_4"
        android:backgroundTint="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h3"
        app:layout_constraintStart_toStartOf="@+id/guideline_v1"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v2"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_h4"
        android:text="@string/_5"
        android:backgroundTint="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h3"
        app:layout_constraintStart_toStartOf="@+id/guideline_v2"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v3"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_h4"
        android:text="@string/_6"
        android:backgroundTint="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_kurang"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline_v3"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_h4"
        android:text="@string/kurang"
        android:backgroundTint="@color/white"
        android:textColor="@color/orange"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v1"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_h3"
        android:text="@string/_7"
        android:backgroundTint="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h2"
        app:layout_constraintStart_toStartOf="@+id/guideline_v1"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v2"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_h3"
        android:text="@string/_8"
        android:backgroundTint="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h2"
        app:layout_constraintStart_toStartOf="@+id/guideline_v2"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v3"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_h3"
        android:text="@string/_9"
        android:backgroundTint="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_plus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline_v3"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_h3"
        android:text="@string/plus"
        android:backgroundTint="@color/white"
        android:textColor="@color/orange"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_AC"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v1"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_h2"
        android:text="@string/ac"
        android:backgroundTint="@color/orange"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_persen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h1"
        app:layout_constraintStart_toStartOf="@+id/guideline_v1"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v2"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_h2"
        android:text="@string/persen"
        android:backgroundTint="@color/white"
        android:textColor="@color/orange"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_bagi"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h1"
        app:layout_constraintStart_toStartOf="@+id/guideline_v2"
        app:layout_constraintEnd_toStartOf="@+id/guideline_v3"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_h2"
        android:text="@string/bagi"
        android:backgroundTint="@color/white"
        android:textColor="@color/orange"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_kali"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline_v3"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_h2"
        android:text="@string/x"
        android:backgroundTint="@color/white"
        android:textColor="@color/orange"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <View
        android:layout_width="200dp"
        android:layout_height="5dp"
        android:layout_marginHorizontal="8dp"
        android:background="#808080"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_h" />

    <TextView
        android:id="@+id/txt_expression"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:gravity="end"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h1"/>

    <TextView
        android:id="@+id/txt_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:gravity="end"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/txt_expression"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h"/>


</androidx.constraintlayout.widget.ConstraintLayout>